--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,28 @@
 body{
 	color:white;
 }
+
+a {
+  color:lightgray;
+  font-family: "Courier New", monospace;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
+
 #title {
 	position:absolute;
 	left:20px;
@@ -11,11 +33,20 @@ body{
   font-size:larger;
 }
 
-#prompt {
+#prompt-l {
 	position:absolute;
 	bottom:20px;
 	left:20px;
   font-family: Georgia, Courier, monospace;
+  font-size:large;
+  color:lightgray;
+}
+
+#prompt-r {
+	position:absolute;
+	bottom:20px;
+	right:20px;
+  font-family: "Courier New", monospace;
   font-size:large;
   color:lightgray;
 }
